# nhk_programs_checker

./: README.md  main.py  program_config.yml  pyproject.toml
nhk_programs_checker/: nhk_programs_checker.py  slack_notifier.py  template.json
